--- a/dev/TabView/TabView.xaml
+++ b/dev/TabView/TabView.xaml
@@ -98,7 +98,6 @@
 
                         <ContentPresenter x:Name="TabContentPresenter"
                             Grid.Row="1"
-                            Background="{ThemeResource TabViewItemHeaderBackgroundSelected}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}" />
                     </Grid>
@@ -453,7 +452,7 @@
 
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
-                                        <Setter Target="TabContainer.Background" Value="red" />
+                                        <Setter Target="TabContainer.Background" Value="{ThemeResource TabViewItemHeaderBackgroundPressed}" />
                                         <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource TabViewItemHeaderForegroundPressed}" />
                                         <Setter Target="IconControl.Foreground" Value="{ThemeResource TabViewItemIconForegroundPressed}" />
                                         <Setter Target="CloseButton.Background" Value="{ThemeResource TabViewItemHeaderPressedCloseButtonBackground}" />
@@ -470,7 +469,7 @@
                                         <Setter Target="SelectedBackgroundPath.Visibility" Value="Visible"/>
                                         <Setter Target="SelectedBackgroundPath.Fill" Value="{ThemeResource TabViewItemHeaderBackgroundSelected}"/>
                                         <Setter Target="TabContainer.Margin" Value="{ThemeResource TabViewSelectedItemHeaderMargin}"/>
-                                        <Setter Target="TabContainer.BorderBrush" Value="Green"/>
+                                        <Setter Target="TabContainer.BorderBrush" Value="{ThemeResource TabViewSelectedItemBorderBrush}"/>
                                         <Setter Target="TabContainer.BorderThickness" Value="{ThemeResource TabViewSelectedItemBorderThickness}"/>
                                         <Setter Target="TabContainer.Padding" Value="{ThemeResource TabViewSelectedItemHeaderPadding}"/>
                                         <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource TabViewItemHeaderForegroundSelected}" />
@@ -490,7 +489,7 @@
                                         <Setter Target="SelectedBackgroundPath.Visibility" Value="Visible"/>
                                         <Setter Target="SelectedBackgroundPath.Fill" Value="{ThemeResource TabViewItemHeaderBackgroundSelected}"/>
                                         <Setter Target="TabContainer.Margin" Value="{ThemeResource TabViewSelectedItemHeaderMargin}"/>
-                                        <Setter Target="TabContainer.BorderBrush" Value="Blue"/>
+                                        <Setter Target="TabContainer.BorderBrush" Value="{ThemeResource TabViewSelectedItemBorderBrush}"/>
                                         <Setter Target="TabContainer.BorderThickness" Value="{ThemeResource TabViewSelectedItemBorderThickness}"/>
                                         <Setter Target="TabContainer.Padding" Value="{ThemeResource TabViewSelectedItemHeaderPadding}"/>
                                         <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource TabViewItemHeaderForegroundSelected}" />
@@ -510,7 +509,7 @@
                                         <Setter Target="SelectedBackgroundPath.Visibility" Value="Visible"/>
                                         <Setter Target="SelectedBackgroundPath.Fill" Value="{ThemeResource TabViewItemHeaderBackgroundSelected}"/>
                                         <Setter Target="TabContainer.Margin" Value="{ThemeResource TabViewSelectedItemHeaderMargin}"/>
-                                        <Setter Target="TabContainer.BorderBrush" Value="Cyan"/>
+                                        <Setter Target="TabContainer.BorderBrush" Value="{ThemeResource TabViewSelectedItemBorderBrush}"/>
                                         <Setter Target="TabContainer.BorderThickness" Value="{ThemeResource TabViewSelectedItemBorderThickness}"/>
                                         <Setter Target="TabContainer.Padding" Value="{ThemeResource TabViewSelectedItemHeaderPadding}"/>
                                         <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource TabViewItemHeaderForegroundSelected}" />
@@ -589,16 +588,13 @@
                                 <VisualState x:Name="NotDragging" />
 
                                 <VisualState x:Name="Dragging">
-                                    <!--<Storyboard>
+                                    <Storyboard>
                                         <DoubleAnimation Storyboard.TargetName="LayoutRoot"
                                                  Storyboard.TargetProperty="Opacity"
                                                  To="{ThemeResource ListViewItemDragThemeOpacity}"
                                                  Duration="0" />
                                         <DragItemThemeAnimation TargetName="LayoutRoot" />
-                                    </Storyboard>-->
-                                    <VisualState.Setters>
-                                        <Setter Target="TabContainer.Background" Value="Orange" />
-                                    </VisualState.Setters>
+                                    </Storyboard>
                                 </VisualState>
 
                                 <VisualState x:Name="DraggingTarget" />
@@ -704,10 +700,20 @@
                                     </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
+
+                            <VisualStateGroup>
+                                <VisualState x:Name="DragDropVisualNotVisible" />
+                                <VisualState x:Name="DragDropVisualVisible">
+                                    <VisualState.Setters>
+                                        <Setter Target="TabDragVisualContainer.Visibility" Value="Visible" />
+                                        <Setter Target="SelectedBackgroundPath.Opacity" Value="0" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
 
                         <Border x:Name="BottomBorderLine" BorderBrush="{ThemeResource TabViewBorderBrush}" BorderThickness="1" Height="1" Grid.ColumnSpan="3" VerticalAlignment="Bottom"/>
-                        
+
                         <Path x:Name="LeftRadiusRenderArc"
                             x:Load="False"
                             Fill="{ThemeResource CardStrokeColorDefault}"
@@ -745,6 +751,15 @@
                             BorderBrush="{ThemeResource TabViewItemSeparator}"
                             BorderThickness="1"
                             Margin="{ThemeResource TabViewItemSeparatorMargin}"/>
+
+                        <Grid x:Name="TabDragVisualContainer"
+                              Grid.Column="1"
+                              Visibility="Collapsed"
+                              Background="{ThemeResource LayerOnMicaAltFillColorTertiaryBrush}"
+                              BorderBrush="{ThemeResource TabViewBorderBrush}"
+                              BorderThickness="{TemplateBinding BorderThickness}"
+                              contract7Present:CornerRadius="8">
+                        </Grid>
 
                         <Grid x:Name="TabContainer"
                             Grid.Column="1"
